--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ task myRun(type: JavaExec){
 
 dependencyManagement {
     imports {
-        mavenBom 'io.micronaut:micronaut-bom:1.1.0.RC2'
+        mavenBom 'io.micronaut:micronaut-bom:1.2.0.BUILD-SNAPSHOT'
     }
 }
 
@@ -61,6 +61,8 @@ dependencies {
     testCompile "org.junit.jupiter:junit-jupiter-api"
     testCompile "io.micronaut.test:micronaut-test-junit5"
     testRuntime "org.junit.jupiter:junit-jupiter-engine"
+
+    developmentOnly "io.micronaut:micronaut-runtime-osx"
 }
 
 // uses built-in Copy
