--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,7 @@ micronaut:
     server:
         cors:
             enabled: true
+    io:
+        watch:
+            paths: src/main
+            restart: true
